--- a/public/index.html
+++ b/public/index.html
@@ -3,20 +3,20 @@
   <head>
     <meta charset="utf-8" />
 
-    <!-- Favicon -->
-    <link rel="icon" href="/favicon.ico" />
-
+    <!-- Favicon (cache-busted) -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico?v=20251223" />
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?v=20251223" />
 
     <!-- Apple -->
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png?v=20251223" />
 
     <!-- PWA -->
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="/manifest.json?v=20251223" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#0f172a" />
 
-    <title>VECT • AI — Landing</title>
+    <title>Vectorium - VECT • AI</title>
   </head>
   <body class="bg-black">
     <div id="root"></div>
